--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -3,17 +3,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px 4%;
-
 }
-
-
 .navbar .logo{
-    width: 150px;
-    border-radius: 10px;
+    width: max(10%,80px);
 }
-
-
 .navbar .profile{
     width: 40px;
-    
 }
