--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -3,10 +3,9 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-color: #00000090 ;
+    background-color: #00000090;
     display: grid;
 }
-
 .login-popup-container{
     place-self: center;
     width: max(23vw,330px);
@@ -20,28 +19,24 @@
     font-size: 14px;
     animation: fadeIn 0.5s;
 }
-
 .login-popup-title{
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
 }
-
 .login-popup-title img{
     width: 16px;
     cursor: pointer;
 }
-
 .login-popup-inputs{
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-
 .login-popup-inputs input{
     outline: none;
-    border: 1px solid #c9c9c9;
+    border: 1px solid #C9C9C9;
     padding: 10px;
     border-radius: 4px;
 }
@@ -50,24 +45,24 @@
     padding: 10px;
     border-radius: 4px;
     color: white;
-    background-color: tomato;
+    background-color: #FF4C24;
     font-size: 15px;
-    cursor: pointer; 
+    cursor: pointer;
 }
-
 .login-popup-condition{
     display: flex;
     align-items: start;
-    margin-top: -15px;
     gap: 8px;
+    margin-top: -15px;
 }
 
 .login-popup-condition input{
-    margin-top: 15px;;
+    margin-top: 5px;
 }
 
+
 .login-popup p span{
-    color: tomato;
+    color: #FF4C24;
     font-weight: 500;
     cursor: pointer;
 }
