--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -1,104 +1,96 @@
-.cart{
-    margin-top: 100px;
+.cart {
+    margin: 100px 0px;
 }
-.cart-items-title{
+
+.cart hr {
+    height: 1px;
+    background-color: #E2E2E2;
+    border: none;
+}
+
+.cart-items-title {
     display: grid;
     grid-template-columns: 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
     align-items: center;
     color: grey;
-    font-size: max(1vw,12px);
+    font-size: max(1vw, 12px);
 }
 
-.cart-item-item{
+.cart-items-item {
     margin: 10px 0px;
     color: black;
-
 }
-.cart-items-item img{
+
+.cart-items-item img {
     width: 50px;
-    height: 50px;
-    object-fit: cover; /* Crops image to fill container */
-    padding: 5px;
-    border-radius: 0.1px;
 }
 
-.cart hr{
-    height: 1px;
-    background-color: #e2e2e2;
-    border: none;
+.cart-items-item div {
+    max-width: 40px;
+    text-align: center;
+    border: 1px solid #EBEBEB;
+    padding: 8px 8px;
+    font-size: 12px;
 }
-
-.cart-items-item .cross{
+.cart-items-remove-icon{
     cursor: pointer;
 }
-
-
-.cart-bottom{
+.cart-bottom {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
-    gap: max(12vw, 20px);
+    gap: max(12vw,20px);
 }
 
-.cart-total{
+.cart-total {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
-
 }
 
-.cart-total-details{
+.cart-total-details {
     display: flex;
     justify-content: space-between;
-    color: #555;
-
+    color: #555555;
 }
 
-.cart-total hr{
+.cart-total hr {
     margin: 10px 0px;
-
-
 }
 
-.cart-total button{
+.cart-total button {
     border: none;
     color: white;
-    background-color: tomato;
-    width:  max(15vw, 200px);
+    background-color: #FF4C24;
+    width: max(15vw,200px);
     padding: 12px 0px;
     border-radius: 4px;
     cursor: pointer;
 }
 
-
-.cart-promocode{
+.cart-promocode {
     flex: 1;
-
 }
 .cart-promocode p{
-    color: #555;
-
+    color: #555555;
 }
-
 .cart-promocode-input{
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #aeaeae;
+    background-color: #eaeaea;
     border-radius: 4px;
 }
-
-.cart .cart-promocode-input input{
-    background: transparent ;
+.cart-promocode-input input{
+    background: transparent;
     border: none;
     outline: none;
     padding-left: 10px;
 }
-
 .cart-promocode-input button{
-    width:  max(10vw, 150px);
+    width: max(10vw,150px);
     padding: 12px 5px;
     background-color: black;
     border: none;
@@ -106,8 +98,8 @@
     border-radius: 4px;
 }
 
-@media (max-width: 750px){
-    .cart-bottom{
+@media(max-width:750px) {
+    .cart-bottom {
         flex-direction: column-reverse;
     }
     .cart-promocode{
