--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -32,7 +32,7 @@
     background: transparent;
     font-size: 16px;
     color: #49558e;
-    border:1px solid tomato;
+    border:1px solid #5474b4;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
@@ -50,7 +50,7 @@
     position: absolute;
     min-width: 10px;
     min-height: 10px;
-    background-color: tomato;
+    background-color: #5474b4;
     border-radius: 5px;
     top: -8px;
     right: -8px;
@@ -78,7 +78,7 @@
     background-color: #fff2ef;
     padding: 12px 25px;
     border-radius: 4px;
-    border: 1px solid tomato;
+    border: 1px solid #5474b4;
     outline: 2px solid white;
     list-style: none;
 }
@@ -88,7 +88,7 @@
 }
 
 .nav-profile-dropdown li:hover{
-    color: tomato;
+    color: #5474b4;
 
 }
 
