--- a/frontend/src/pages/MyOrders/MyOrders.css
+++ b/frontend/src/pages/MyOrders/MyOrders.css
@@ -1,13 +1,52 @@
-.my-orders{
+.order-item .order-details {
+    flex: 1; /* Takes remaining space */
+  }
+  
+  .order-item .order-actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 10px;
+    min-width: 150px;
+  }
+  
+  .order-item .order-actions select {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+  
+
+
+.my-orders {
     margin: 50px 0px;
 }
-.my-orders .container{
+
+.progress-bar-container {
+    width: 100%;
+    background-color: #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    height: 10px;
+    margin-top: 5px;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: green;
+    transition: width 1s ease-in-out;
+}
+
+.my-orders .container {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
 }
-.my-orders-order{
+
+.my-orders-order {
     display: grid;
     grid-template-columns: 0.5fr 2fr 1fr 1fr 2fr 1fr;
     align-items: center;
@@ -15,19 +54,24 @@
     font-size: 14px;
     padding: 10px 20px;
     color: #454545;
-    border: 1px solid tomato;
+    border: 1px solid #5474b4;
+    position: relative;
 }
-.my-orders-order img{
+
+.my-orders-order img {
     width: 50px;
 }
-.my-orders-order p span{
-    color: tomato;
+
+.my-orders-order p span {
+    color: #5474b4;
 }
-.my-orders-order p b{
+
+.my-orders-order p b {
     font-weight: 500;
     color: #454545;
 }
-.my-orders button{
+
+.my-orders button {
     border: none;
     padding: 12px 0px;
     border-radius: 4px;
@@ -35,14 +79,28 @@
     cursor: pointer;
     color: #454545;
 }
-@media (max-width:900px) {
-    .my-orders-order{
+
+@media (max-width: 900px) {
+    .my-orders-order {
         grid-template-columns: 1fr 2fr 1fr;
         row-gap: 5px;
         font-size: 12px;
     }
-    .my-orders-order button{
+    .my-orders-order button {
         font-size: 10px;
     }
-    
 }
+
+
+.order-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+  }
+  
+  
+  
