--- a/frontend/src/pages/MyOrders/MyOrders.css
+++ b/frontend/src/pages/MyOrders/MyOrders.css
@@ -143,6 +143,16 @@
   cursor: pointer;
   font-size: 1rem;
 }
+.track-order-thankyou-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
 
 
 .track-order-btn:hover {
